--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "type": "module",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.43.0",
+    "eslint-plugin-solid": "^0.12.1",
     "postcss": "^8.4.21",
     "solid-start-node": "^0.2.19",
     "tailwindcss": "^3.2.4",
