--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "simply-invoice",
-  "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start start"
-  },
-  "type": "module",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.43.0",
-    "eslint-plugin-solid": "^0.12.1",
-    "postcss": "^8.4.21",
-    "solid-start-node": "^0.2.19",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^5.1.3",
-    "vite": "^4.1.4"
-  },
-  "dependencies": {
-    "@solidjs/meta": "^0.28.2",
-    "@solidjs/router": "^0.8.2",
-    "solid-js": "^1.7.2",
-    "solid-start": "^0.2.26",
-    "undici": "^5.15.1"
-  },
-  "engines": {
-    "node": ">=16"
-  }
+	"name": "simply-invoice",
+	"scripts": {
+		"dev": "solid-start dev",
+		"build": "solid-start build",
+		"start": "solid-start start",
+		"format": "prettier --write src"
+	},
+	"type": "module",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-solid": "^0.12.1",
+		"postcss": "^8.4.21",
+		"prettier": "2.8.8",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"solid-start-node": "^0.2.19",
+		"tailwindcss": "^3.2.4",
+		"typescript": "^5.1.3",
+		"vite": "^4.1.4"
+	},
+	"dependencies": {
+		"@solidjs/meta": "^0.28.2",
+		"@solidjs/router": "^0.8.2",
+		"solid-js": "^1.7.2",
+		"solid-start": "^0.2.26",
+		"undici": "^5.15.1"
+	},
+	"engines": {
+		"node": ">=16"
+	}
 }
