--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@netlify/functions": "^1.6.0",
+		"@react-pdf/renderer": "^3.1.12",
 		"@remix-run/css-bundle": "^1.19.1",
 		"@remix-run/netlify": "^1.19.1",
 		"@remix-run/node": "^1.18.1",
