--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"private": true,
 	"sideEffects": false,
 	"scripts": {
-		"build": "remix build",
-		"dev": "remix dev",
-		"start": "netlify serve",
+		"dev": "vite dev",
+		"build": "vite build && vite build --ssr",
+		"start": "remix-serve ./build/index.js",
 		"typecheck": "tsc",
 		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\""
 	},
@@ -12,10 +12,9 @@
 		"@netlify/functions": "^1.6.0",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@react-pdf/renderer": "^3.1.12",
-		"@remix-run/css-bundle": "^1.19.3",
 		"@remix-run/netlify": "^1.19.3",
-		"@remix-run/node": "^1.18.1",
-		"@remix-run/react": "^1.19.3",
+		"@remix-run/node": "^2.2.0",
+		"@remix-run/react": "^2.2.0",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
 		"isbot": "^3.6.13",
@@ -24,9 +23,9 @@
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^1.19.3",
-		"@remix-run/eslint-config": "^1.19.3",
-		"@remix-run/serve": "^1.19.3",
+		"@remix-run/dev": "^2.2.0",
+		"@remix-run/eslint-config": "^2.2.0",
+		"@remix-run/serve": "^2.2.0",
 		"@types/react": "^18.2.20",
 		"@types/react-dom": "^18.2.7",
 		"@types/uuid": "^9.0.2",
@@ -37,7 +36,9 @@
 		"prettier": "3.0.2",
 		"prettier-plugin-tailwindcss": "^0.5.3",
 		"tailwindcss": "^3.3.3",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"vite": "^4.5.0",
+		"vite-tsconfig-paths": "^4.2.1"
 	},
 	"engines": {
 		"node": ">=18.0.0"
