--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"cssnano": "^6.0.1",
 		"eslint": "^8.47.0",
 		"postcss-preset-env": "^9.1.1",
-		"prettier": "3.0.2",
+		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.3",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.1.6",
