--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"private": true,
 	"sideEffects": false,
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && vite build --ssr",
