--- a/package.json
+++ b/package.json
@@ -3,43 +3,42 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build && vite build --ssr",
-		"start": "remix-serve ./build/index.js",
-		"typecheck": "tsc",
-		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\""
+		"build": "remix vite:build",
+		"dev": "remix vite:dev",
+		"start": "remix-serve ./build/server/index.js",
+		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\"",
+		"typecheck": "tsc"
 	},
 	"dependencies": {
-		"@netlify/functions": "^1.6.0",
 		"@radix-ui/react-dialog": "^1.0.5",
-		"@react-pdf/renderer": "^3.1.14",
-		"@remix-run/netlify": "^1.19.3",
-		"@remix-run/node": "^2.4.1",
-		"@remix-run/react": "^2.4.1",
-		"clsx": "^2.0.0",
+		"@react-pdf/renderer": "^3.1.15",
+		"@remix-run/node": "^2.5.0",
+		"@remix-run/react": "^2.5.0",
+		"@remix-run/serve": "^2.5.0",
+		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
-		"isbot": "^3.7.1",
+		"isbot": "^4.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^2.4.1",
-		"@remix-run/eslint-config": "^2.4.1",
-		"@remix-run/serve": "^2.4.1",
-		"@types/react": "^18.2.45",
+		"@remix-run/dev": "^2.5.0",
+		"@remix-run/eslint-config": "^2.5.0",
+		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
 		"@types/uuid": "^9.0.7",
 		"autoprefixer": "^10.4.16",
-		"cssnano": "^6.0.2",
+		"cssnano": "^6.0.3",
 		"eslint": "^8.56.0",
 		"postcss-preset-env": "^9.3.0",
 		"prettier": "^3.1.1",
-		"prettier-plugin-tailwindcss": "^0.5.9",
-		"tailwindcss": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.5.11",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10",
-		"vite-tsconfig-paths": "^4.2.2"
+		"vite": "^5.0.11",
+		"vite-tsconfig-paths": "^4.2.3"
 	},
 	"engines": {
 		"node": ">=18.0.0"
