--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^2.5.0",
-		"@remix-run/eslint-config": "^2.5.0",
 		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
 		"@types/uuid": "^9.0.7",
+		"@typescript-eslint/eslint-plugin": "^6.18.1",
 		"autoprefixer": "^10.4.16",
 		"cssnano": "^6.0.3",
 		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss-preset-env": "^9.3.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.11",
