--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@react-pdf/renderer": "^3.1.17",
 		"@remix-run/node": "^2.5.0",
 		"@remix-run/react": "^2.5.0",
 		"@remix-run/serve": "^2.5.0",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
 		"isbot": "^4.4.0",
+		"lucide-react": "^0.309.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"tailwind-merge": "^2.2.0",
+		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
