--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"cross-env": "^7.0.3",
 		"isbot": "^4.4.0",
 		"lucide-react": "^0.309.0",
+		"nanoid": "^5.0.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.0",
