--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-pdf/renderer": "^3.2.1",
 		"@remix-run/node": "^2.5.1",
 		"@remix-run/react": "^2.5.1",
@@ -24,6 +26,7 @@
 		"isbot": "^4.4.0",
 		"lucide-react": "^0.312.0",
 		"nanoid": "^5.0.4",
+		"query-string": "^8.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.0",
