--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"nanoid": "^5.0.4",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7",
