--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
+		"framer-motion": "^11.0.3",
 		"isbot": "^4.4.0",
 		"lucide-react": "^0.314.0",
 		"nanoid": "^5.0.4",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
-		"react-dnd": "^16.0.1",
-		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
