--- a/package.json
+++ b/package.json
@@ -17,30 +17,28 @@
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-pdf/renderer": "^3.3.4",
-		"@remix-run/node": "^2.5.1",
-		"@remix-run/react": "^2.5.1",
-		"@remix-run/serve": "^2.5.1",
+		"@remix-run/node": "^2.6.0",
+		"@remix-run/react": "^2.6.0",
+		"@remix-run/serve": "^2.6.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
 		"framer-motion": "^11.0.3",
 		"isbot": "^4.4.0",
 		"localforage": "^1.10.0",
-		"lucide-react": "^0.314.0",
-		"nanoid": "^5.0.4",
+		"lucide-react": "^0.321.0",
+		"nanoid": "^5.0.5",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.1",
-		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^9.0.1"
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^2.5.1",
-		"@types/react": "^18.2.48",
+		"@remix-run/dev": "^2.6.0",
+		"@types/react": "^18.2.51",
 		"@types/react-dom": "^18.2.18",
-		"@types/uuid": "^9.0.7",
-		"@typescript-eslint/eslint-plugin": "^6.19.1",
+		"@typescript-eslint/eslint-plugin": "^6.20.0",
 		"autoprefixer": "^10.4.17",
 		"cssnano": "^6.0.3",
 		"eslint": "^8.56.0",
