--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -33,6 +34,7 @@
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
+		"tiny-invariant": "^1.3.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
