--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^2.6.0",
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/react": "^18.2.55",
 		"@types/react-dom": "^18.2.19",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
