--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
+		"dexie": "^3.2.5",
 		"framer-motion": "^11.0.5",
 		"isbot": "^4.4.0",
 		"localforage": "^1.10.0",
@@ -35,6 +36,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tiny-invariant": "^1.3.1",
+		"ulid": "^2.3.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
