--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.7",
@@ -23,6 +24,7 @@
 		"@remix-run/serve": "^2.6.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cmdk": "^0.2.1",
 		"cross-env": "^7.0.3",
 		"dexie": "^3.2.5",
 		"framer-motion": "^11.0.5",
