--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"scripts": {
 		"build": "remix vite:build",
 		"dev": "remix vite:dev",
-		"start": "remix-serve ./build/server/index.js",
+		"start": "netlify serve",
 		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
 		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\"",
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@netlify/functions": "^2.6.0",
+		"@netlify/remix-adapter": "^2.3.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
