--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"postcss-preset-env": "^9.5.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.12",
+		"remix-development-tools": "^4.0.5",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.4.2",
 		"vite": "^5.1.5",
