--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 		"paths": {
 			"~/*": ["./app/*"]
 		},
+		"types": ["@remix-run/react/future/single-fetch.d.ts"],
 
 		// Vite takes care of building everything, not tsc.
 		"noEmit": true
