--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.0.3",
 		"@netlify/functions": "^2.6.3",
 		"@netlify/remix-adapter": "^2.3.1",
 		"@react-pdf/renderer": "^3.4.4",
