--- a/solid-project/package.json
+++ b/solid-project/package.json
@@ -19,7 +19,10 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^7.10.0",
     "cssnano": "^7.0.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-solid": "^0.14.0",
     "postcss-preset-env": "^9.5.14"
   }
 }
