--- a/solid-project/package.json
+++ b/solid-project/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "example-with-tailwindcss",
-  "type": "module",
-  "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
-  },
-  "dependencies": {
-    "@solidjs/router": "^0.13.3",
-    "@solidjs/start": "^1.0.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "solid-js": "^1.8.17",
-    "tailwindcss": "^3.4.3",
-    "vinxi": "^0.3.11"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "devDependencies": {
-    "@typescript-eslint/parser": "^7.10.0",
-    "cssnano": "^7.0.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-solid": "^0.14.0",
-    "postcss-preset-env": "^9.5.14"
-  }
+	"name": "example-with-tailwindcss",
+	"type": "module",
+	"scripts": {
+		"dev": "vinxi dev",
+		"build": "vinxi build",
+		"start": "vinxi start"
+	},
+	"dependencies": {
+		"@solidjs/router": "^0.13.3",
+		"@solidjs/start": "^1.0.0",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
+		"solid-js": "^1.8.17",
+		"tailwindcss": "^3.4.3",
+		"vinxi": "^0.3.11"
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"devDependencies": {
+		"@typescript-eslint/parser": "^7.10.0",
+		"cssnano": "^7.0.1",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-solid": "^0.14.0",
+		"postcss-preset-env": "^9.5.14",
+		"prettier": "3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.14"
+	}
 }
