--- a/solid-project/package.json
+++ b/solid-project/package.json
@@ -10,8 +10,10 @@
 		"@solidjs/router": "^0.13.3",
 		"@solidjs/start": "^1.0.0",
 		"autoprefixer": "^10.4.19",
+		"clsx": "^2.1.1",
 		"postcss": "^8.4.38",
 		"solid-js": "^1.8.17",
+		"tailwind-merge": "^2.3.0",
 		"tailwindcss": "^3.4.3",
 		"vinxi": "^0.3.11"
 	},
