--- a/solid-project/package.json
+++ b/solid-project/package.json
@@ -28,6 +28,7 @@
 		"eslint-plugin-solid": "^0.14.0",
 		"postcss-preset-env": "^9.5.14",
 		"prettier": "3.2.5",
-		"prettier-plugin-tailwindcss": "^0.5.14"
+		"prettier-plugin-tailwindcss": "^0.5.14",
+		"typescript": "^5.4.5"
 	}
 }
