--- a/solid-project/package.json
+++ b/solid-project/package.json
@@ -11,6 +11,7 @@
 		"@solidjs/start": "^1.0.0",
 		"autoprefixer": "^10.4.19",
 		"clsx": "^2.1.1",
+		"dexie": "^4.0.7",
 		"postcss": "^8.4.38",
 		"solid-js": "^1.8.17",
 		"tailwind-merge": "^2.3.0",
