--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -16,8 +16,6 @@
 	"tabWidth": 2,
 	"trailingComma": "all",
 	"useTabs": true,
-	"plugins": [
-		"prettier-plugin-tailwindcss"
-	],
+	"plugins": ["prettier-plugin-tailwindcss"],
 	"tailwindConfig": "./tailwind.config.ts"
 }
