--- a/package.json
+++ b/package.json
@@ -9,27 +9,29 @@
 	"dependencies": {
 		"@solidjs/router": "^0.13.3",
 		"@solidjs/start": "^1.0.0",
-		"autoprefixer": "^10.4.19",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.7",
-		"postcss": "^8.4.38",
+		"nanoid": "^5.0.7",
 		"solid-js": "^1.8.17",
-		"tailwind-merge": "^2.3.0",
-		"tailwindcss": "^3.4.3",
+		"ulid": "^2.3.0",
 		"vinxi": "^0.3.11"
 	},
-	"engines": {
-		"node": ">=18"
-	},
 	"devDependencies": {
-		"@typescript-eslint/parser": "^7.10.0",
+		"@typescript-eslint/parser": "^7.11.0",
+		"autoprefixer": "^10.4.19",
 		"cssnano": "^7.0.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-solid": "^0.14.0",
+		"postcss": "^8.4.38",
 		"postcss-preset-env": "^9.5.14",
 		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.14",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss": "^3.4.3",
 		"typescript": "^5.4.5"
+	},
+	"engines": {
+		"node": ">=18"
 	}
 }
