--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
 		"@remix-run/dev": "^2.9.2",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.11.0",
-		"@typescript-eslint/parser": "^7.11.0",
+		"@typescript-eslint/eslint-plugin": "^7.12.0",
+		"@typescript-eslint/parser": "^7.12.0",
 		"autoprefixer": "^10.4.19",
-		"cssnano": "^7.0.1",
+		"cssnano": "^7.0.2",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
@@ -49,14 +49,15 @@
 		"eslint-plugin-react": "^7.34.2",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"postcss-preset-env": "^9.5.14",
-		"prettier": "^3.3.0",
+		"prettier": "^3.3.1",
 		"prettier-plugin-tailwindcss": "^0.6.1",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^3.4.4",
 		"typescript": "^5.4.5",
-		"vite": "^5.2.12",
+		"vite": "^5.2.13",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"engines": {
 		"node": ">=18.0.0"
-	}
+	},
+	"packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771"
 }
