--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"nanoid": "^5.0.7",
 		"query-string": "^9.0.0",
 		"react": "^18.3.1",
+		"react-aria-components": "^1.2.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.3.0",
 		"tiny-invariant": "^1.3.3",
