--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
-		"@headlessui/react": "^2.0.4",
 		"@netlify/functions": "^2.7.0",
 		"@netlify/remix-adapter": "^2.4.0",
 		"@react-pdf/renderer": "^3.4.4",
@@ -30,6 +29,8 @@
 		"react-aria-components": "^1.2.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-react-aria-components": "^1.1.3",
 		"tiny-invariant": "^1.3.3",
 		"ulid": "^2.3.0",
 		"zod": "^3.23.8"
