--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@remix-run/serve": "^2.10.0",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
+		"cva": "1.0.0-beta.1",
 		"dexie": "^4.0.7",
 		"framer-motion": "^11.2.12",
 		"isbot": "^4.4.0",
