--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-aria-components": "^1.2.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tailwindcss-react-aria-components": "^1.1.3",
 		"tiny-invariant": "^1.3.3",
