--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@react-pdf/renderer": "^3.4.4",
-		"@remix-run/node": "^2.10.2",
-		"@remix-run/react": "^2.10.2",
-		"@remix-run/serve": "^2.10.2",
+		"@remix-run/node": "^2.10.3",
+		"@remix-run/react": "^2.10.3",
+		"@remix-run/serve": "^2.10.3",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"cva": "1.0.0-beta.1",
-		"dexie": "^4.0.7",
-		"framer-motion": "^11.2.14",
+		"dexie": "^4.0.8",
+		"downshift": "^9.0.6",
+		"framer-motion": "^11.3.8",
 		"isbot": "^4.4.0",
-		"lucide-react": "^0.405.0",
+		"lucide-react": "^0.411.0",
 		"nanoid": "^5.0.7",
 		"query-string": "^9.0.0",
 		"react": "^18.3.1",
@@ -42,11 +43,11 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^2.10.2",
+		"@remix-run/dev": "^2.10.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.16.0",
-		"@typescript-eslint/parser": "^7.16.0",
+		"@typescript-eslint/eslint-plugin": "^7.16.1",
+		"@typescript-eslint/parser": "^7.16.1",
 		"autoprefixer": "^10.4.19",
 		"cssnano": "^7.0.4",
 		"eslint": "^8.57.0",
@@ -54,14 +55,14 @@
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
-		"eslint-plugin-react": "^7.34.3",
+		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"postcss-preset-env": "^9.6.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"tailwindcss": "^3.4.4",
+		"tailwindcss": "^3.4.6",
 		"typescript": "^5.5.3",
-		"vite": "^5.3.3",
+		"vite": "^5.3.4",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"engines": {
