updates feature flags

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,20 @@
 {
-	"include": ["env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": [
+		"env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"**/.server/**/*.ts",
+		"**/.server/**/*.tsx",
+		"**/.client/**/*.ts",
+		"**/.client/**/*.tsx"
+	],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ES2022"],
+		"types": [
+			"@remix-run/node",
+			"vite/client",
+			"@remix-run/react/future/single-fetch.d.ts"
+		],
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"jsx": "react-jsx",
@@ -12,13 +25,11 @@
 		"strict": true,
 		"allowJs": true,
 		"skipLibCheck": true,
-		"verbatimModuleSyntax": true,
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": ".",
 		"paths": {
 			"~/*": ["./app/*"]
 		},
-		"types": ["@remix-run/react/future/single-fetch.d.ts"],
 
 		// Vite takes care of building everything, not tsc.
 		"noEmit": true
