--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "dev": "react-router dev",
-    "build": "react-router build",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@react-router/node": "7.0.0-pre.0",
-    "@react-router/serve": "7.0.0-pre.0",
-    "@tailwindcss/vite": "^4.0.0-alpha.25",
-    "isbot": "^5.1.17",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "7.0.0-pre.0"
-  },
-  "devDependencies": {
-    "@react-router/dev": "7.0.0-pre.0",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^4.0.0-alpha.25",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^5.0.1"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  }
+	"private": true,
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"dev": "react-router dev",
+		"build": "react-router build",
+		"start": "react-router-serve ./build/server/index.js",
+		"typecheck": "react-router typegen && tsc",
+		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\""
+	},
+	"dependencies": {
+		"@react-router/node": "7.0.0-pre.0",
+		"@react-router/serve": "7.0.0-pre.0",
+		"@tailwindcss/vite": "^4.0.0-alpha.25",
+		"isbot": "^5.1.17",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router": "7.0.0-pre.0"
+	},
+	"devDependencies": {
+		"@react-router/dev": "7.0.0-pre.0",
+		"@types/react": "^18.3.9",
+		"@types/react-dom": "^18.3.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"tailwindcss": "^4.0.0-alpha.25",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.8",
+		"vite-tsconfig-paths": "^5.0.1"
+	},
+	"engines": {
+		"node": ">=20.0.0"
+	}
 }
