--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "react-router build",
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc",
-		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+		"lint": "eslint .",
 		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\""
 	},
 	"dependencies": {
@@ -20,13 +20,22 @@
 		"react-router": "7.0.0-pre.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.11.1",
 		"@react-router/dev": "7.0.0-pre.0",
+		"@types/eslint__js": "^8.42.3",
 		"@types/react": "^18.3.9",
 		"@types/react-dom": "^18.3.0",
+		"eslint": "^9.11.1",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-jsx-a11y": "^6.10.0",
+		"eslint-plugin-react": "^7.37.1",
+		"eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
+		"globals": "^15.10.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"tailwindcss": "^4.0.0-alpha.25",
 		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.8.0",
 		"vite": "^5.4.8",
 		"vite-tsconfig-paths": "^5.0.1"
 	},
