--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@react-router/node": "7.0.0-pre.0",
 		"@react-router/serve": "7.0.0-pre.0",
 		"@tailwindcss/vite": "^4.0.0-alpha.25",
+		"clsx": "^2.1.1",
 		"isbot": "^5.1.17",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router": "7.0.0-pre.0"
+		"react-router": "7.0.0-pre.0",
+		"tailwind-merge": "^2.5.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
