--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
 		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\""
 	},
 	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-form": "^0.1.0",
+		"@radix-ui/react-switch": "^1.1.1",
 		"@react-router/node": "7.0.0-pre.0",
 		"@react-router/serve": "7.0.0-pre.0",
 		"@tailwindcss/vite": "^4.0.0-alpha.25",
 		"clsx": "^2.1.1",
+		"dexie": "^4.0.8",
+		"downshift": "^9.0.8",
+		"framer-motion": "^11.11.1",
 		"isbot": "^5.1.17",
+		"lucide-react": "^0.447.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router": "7.0.0-pre.0",
-		"tailwind-merge": "^2.5.3"
+		"tailwind-merge": "^2.5.3",
+		"ulid": "^2.3.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
