--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"framer-motion": "^11.11.1",
 		"isbot": "^5.1.17",
 		"lucide-react": "^0.447.0",
+		"nanoid": "^5.0.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router": "7.0.0-pre.0",
