--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@react-router/node": "7.0.0-pre.0",
 		"@react-router/serve": "7.0.0-pre.0",
 		"@tailwindcss/vite": "4.0.0-alpha.26",
+		"babel-plugin-react-compiler": "0.0.0-experimental-58c2b1c-20241007",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.8",
 		"downshift": "^9.0.8",
@@ -27,10 +28,12 @@
 		"lucide-react": "^0.447.0",
 		"nanoid": "^5.0.7",
 		"react": "^18.3.1",
+		"react-compiler-runtime": "0.0.0-experimental-8d8e73f-20241007",
 		"react-dom": "^18.3.1",
 		"react-router": "7.0.0-pre.0",
 		"tailwind-merge": "^2.5.3",
 		"ulid": "^2.3.0",
+		"vite-plugin-babel": "^1.2.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
