--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"downshift": "^9.0.8",
 		"framer-motion": "^11.11.8",
 		"isbot": "^5.1.17",
-		"lucide-react": "^0.451.0",
+		"lucide-react": "^0.452.0",
 		"nanoid": "^5.0.7",
 		"react": "^18.3.1",
 		"react-compiler-runtime": "0.0.0-experimental-8d8e73f-20241011",
@@ -46,7 +46,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jsx-a11y": "^6.10.0",
 		"eslint-plugin-react": "^7.37.1",
-		"eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
+		"eslint-plugin-react-hooks": "5.0.0",
 		"globals": "^15.11.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
