--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
 		"@react-router/node": "7.0.0-pre.0",
 		"@react-router/serve": "7.0.0-pre.0",
 		"@tailwindcss/vite": "4.0.0-alpha.26",
-		"babel-plugin-react-compiler": "0.0.0-experimental-fa06e2c-20241014",
+		"babel-plugin-react-compiler": "19.0.0-beta-9ee70a1-20241017",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.8",
 		"downshift": "^9.0.8",
-		"framer-motion": "^11.11.8",
+		"framer-motion": "^11.11.9",
 		"isbot": "^5.1.17",
-		"lucide-react": "^0.452.0",
+		"lucide-react": "^0.453.0",
 		"nanoid": "^5.0.7",
 		"react": "^18.3.1",
-		"react-compiler-runtime": "0.0.0-experimental-fa06e2c-20241014",
+		"react-compiler-runtime": "19.0.0-beta-9ee70a1-20241017",
 		"react-dom": "^18.3.1",
 		"react-router": "7.0.0-pre.0",
 		"tailwind-merge": "^2.5.4",
@@ -37,12 +37,12 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.12.0",
+		"@eslint/js": "^9.13.0",
 		"@react-router/dev": "7.0.0-pre.0",
 		"@types/eslint__js": "^8.42.3",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.1",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jsx-a11y": "^6.10.0",
 		"eslint-plugin-react": "^7.37.1",
@@ -52,7 +52,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"tailwindcss": "4.0.0-alpha.26",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.9.0",
+		"typescript-eslint": "^8.10.0",
 		"vite": "^5.4.9",
 		"vite-tsconfig-paths": "^5.0.1"
 	},
