--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
 		"@react-router/dev": "7.0.0-pre.0",
+		"@tauri-apps/cli": "^2.0.3",
 		"@types/eslint__js": "^8.42.3",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.1",
