enters the db and file dialog setup

--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
 		"@react-router/node": "7.0.0-pre.0",
 		"@react-router/serve": "7.0.0-pre.0",
 		"@tailwindcss/vite": "4.0.0-alpha.26",
+		"@tauri-apps/api": "^2.0.3",
+		"@tauri-apps/plugin-dialog": "~2",
+		"@tauri-apps/plugin-fs": "~2.0.1",
+		"@tauri-apps/plugin-sql": "~2",
+		"@tauri-apps/plugin-store": "~2",
 		"babel-plugin-react-compiler": "19.0.0-beta-9ee70a1-20241017",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.8",
