--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-router": "7.0.0-pre.4",
 		"tailwind-merge": "^2.5.4",
 		"ulid": "^2.3.0",
+		"valibot": "1.0.0-beta.3",
 		"vite-plugin-babel": "^1.2.0",
 		"zod": "^3.23.8"
 	},
