--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-form": "^0.1.0",
 		"@radix-ui/react-switch": "^1.1.1",
-		"@react-pdf/renderer": "^4.0.2",
-		"@react-router/node": "7.0.0-pre.4",
-		"@react-router/serve": "7.0.0-pre.4",
+		"@react-pdf/renderer": "^4.1.4",
+		"@react-router/node": "7.0.0",
+		"@react-router/serve": "7.0.0",
 		"@tailwindcss/vite": "4.0.0-alpha.26",
 		"@tauri-apps/api": "^2.1.1",
 		"@tauri-apps/plugin-dialog": "~2.0.1",
@@ -28,42 +28,42 @@
 		"@tauri-apps/plugin-store": "~2.1.0",
 		"babel-plugin-react-compiler": "19.0.0-beta-a7bf2bd-20241110",
 		"clsx": "^2.1.1",
-		"dexie": "^4.0.9",
+		"dexie": "^4.0.10",
 		"downshift": "^9.0.8",
 		"framer-motion": "^11.11.17",
 		"isbot": "^5.1.17",
-		"lucide-react": "^0.459.0",
+		"lucide-react": "^0.460.0",
 		"nanoid": "^5.0.8",
 		"react": "^18.3.1",
 		"react-compiler-runtime": "19.0.0-beta-a7bf2bd-20241110",
 		"react-dom": "^18.3.1",
-		"react-router": "7.0.0-pre.4",
+		"react-router": "7.0.0",
 		"tailwind-merge": "^2.5.4",
 		"ulid": "^2.3.0",
-		"valibot": "1.0.0-beta.6",
+		"valibot": "1.0.0-beta.8",
 		"vite-plugin-babel": "^1.2.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.14.0",
-		"@react-router/dev": "7.0.0-pre.4",
+		"@eslint/js": "^9.15.0",
+		"@react-router/dev": "7.0.0",
 		"@tauri-apps/cli": "^2.1.0",
 		"@types/eslint__js": "^8.42.3",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
-		"eslint": "^9.14.0",
+		"eslint": "^9.15.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "5.0.0",
 		"globals": "^15.12.0",
 		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"tailwindcss": "4.0.0-alpha.26",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.14.0",
+		"typescript-eslint": "^8.15.0",
 		"vite": "^5.4.11",
-		"vite-tsconfig-paths": "^5.1.2"
+		"vite-tsconfig-paths": "^5.1.3"
 	},
 	"engines": {
 		"node": ">=20.0.0"
