--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 		"@radix-ui/react-form": "^0.1.0",
 		"@radix-ui/react-switch": "^1.1.1",
 		"@react-pdf/renderer": "^4.1.4",
-		"@react-router/node": "7.0.0",
-		"@react-router/serve": "7.0.0",
-		"@tailwindcss/vite": "4.0.0-alpha.26",
+		"@react-router/node": "7.0.1",
+		"@react-router/serve": "7.0.1",
+		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@tauri-apps/api": "^2.1.1",
 		"@tauri-apps/plugin-dialog": "~2.0.1",
 		"@tauri-apps/plugin-fs": "~2.0.2",
@@ -37,8 +37,9 @@
 		"react": "^18.3.1",
 		"react-compiler-runtime": "19.0.0-beta-a7bf2bd-20241110",
 		"react-dom": "^18.3.1",
-		"react-router": "7.0.0",
+		"react-router": "7.0.1",
 		"tailwind-merge": "^2.5.4",
+		"tailwindcss": "4.0.0-beta.2",
 		"ulid": "^2.3.0",
 		"valibot": "1.0.0-beta.8",
 		"vite-plugin-babel": "^1.2.0",
@@ -46,7 +47,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
-		"@react-router/dev": "7.0.0",
+		"@react-router/dev": "7.0.1",
 		"@tauri-apps/cli": "^2.1.0",
 		"@types/eslint__js": "^8.42.3",
 		"@types/react": "^18.3.12",
@@ -59,8 +60,7 @@
 		"globals": "^15.12.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "4.0.0-alpha.26",
-		"typescript": "^5.6.3",
+		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.15.0",
 		"vite": "^5.4.11",
 		"vite-tsconfig-paths": "^5.1.3"
