--- a/package.json
+++ b/package.json
@@ -3,67 +3,70 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"dev": "react-router dev",
 		"build": "react-router build",
-		"start": "react-router-serve ./build/server/index.js",
-		"typecheck": "react-router typegen && tsc",
+		"dev": "react-router dev",
 		"lint": "eslint ./app",
 		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\"",
+		"start": "react-router-serve ./build/server/index.js",
+		"tauri:build": "tauri build",
 		"tauri:dev": "tauri dev",
-		"tauri:build": "tauri build"
+		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
+		"@lexical/react": "^0.21.0",
+		"@lexical/utils": "^0.21.0",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-form": "^0.1.0",
 		"@radix-ui/react-switch": "^1.1.1",
-		"@react-pdf/renderer": "^4.1.4",
-		"@react-router/node": "7.0.1",
-		"@react-router/serve": "7.0.1",
+		"@react-pdf/renderer": "^4.1.5",
+		"@react-router/node": "7.0.2",
+		"@react-router/serve": "7.0.2",
 		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@tauri-apps/api": "^2.1.1",
-		"@tauri-apps/plugin-dialog": "~2.0.1",
-		"@tauri-apps/plugin-fs": "~2.0.2",
-		"@tauri-apps/plugin-sql": "~2.0.1",
-		"@tauri-apps/plugin-store": "~2.1.0",
+		"@tauri-apps/plugin-dialog": "~2.2.0",
+		"@tauri-apps/plugin-fs": "~2.2.0",
+		"@tauri-apps/plugin-sql": "~2.2.0",
+		"@tauri-apps/plugin-store": "~2.2.0",
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.10",
 		"downshift": "^9.0.8",
-		"framer-motion": "^11.11.17",
+		"framer-motion": "^11.13.5",
 		"isbot": "^5.1.17",
-		"lucide-react": "^0.461.0",
-		"nanoid": "^5.0.8",
+		"lexical": "^0.21.0",
+		"lucide-react": "^0.468.0",
+		"nanoid": "^5.0.9",
 		"react": "^18.3.1",
 		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
 		"react-dom": "^18.3.1",
-		"react-router": "7.0.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss": "4.0.0-beta.2",
 		"ulid": "^2.3.0",
-		"valibot": "1.0.0-beta.8",
-		"vite-plugin-babel": "^1.2.0",
-		"zod": "^3.23.8"
+		"valibot": "1.0.0-beta.9",
+		"vite-plugin-babel": "^1.3.0",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.15.0",
-		"@react-router/dev": "7.0.1",
+		"@eslint/js": "^9.16.0",
+		"@react-router/dev": "7.0.2",
 		"@tauri-apps/cli": "^2.1.0",
 		"@types/eslint__js": "^8.42.3",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"eslint": "^9.15.0",
+		"@types/react": "^18.3.16",
+		"@types/react-dom": "^18.3.5",
+		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.2",
-		"eslint-plugin-react-hooks": "5.0.0",
-		"globals": "^15.12.0",
-		"prettier": "^3.3.3",
+		"eslint-plugin-react-hooks": "5.1.0",
+		"globals": "^15.13.0",
+		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
+		"react-router": "7.0.2",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.16.0",
+		"typescript-eslint": "^8.18.0",
 		"vite": "^5.4.11",
-		"vite-tsconfig-paths": "^5.1.3"
+		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"engines": {
 		"node": ">=20.0.0"
