--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"useDefineForClassFields": true,
 		"allowImportingTsExtensions": true,
 		"lib": ["DOM", "DOM.Iterable", "ES2022"],
-		"types": ["@react-router/node", "vite/client"],
+		"types": ["node", "vite/client"],
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"jsx": "react-jsx",
@@ -33,7 +33,7 @@
 		},
 		"noEmit": true,
 		"rootDirs": [".", "./.react-router/types"],
-		"plugins": [{ "name": "@react-router/dev" }]
+		"verbatimModuleSyntax": true
 	},
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
