--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@base-ui-components/react": "1.0.0-alpha.4",
+		"@headlessui/react": "^2.2.0",
 		"@portabletext/editor": "^1.18.7",
 		"@react-pdf/renderer": "^4.1.6",
 		"@react-router/node": "^7.1.1",
@@ -24,7 +25,6 @@
 		"@tauri-apps/plugin-store": "~2.2.0",
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"clsx": "^2.1.1",
-		"downshift": "^9.0.8",
 		"framer-motion": "^11.15.0",
 		"isbot": "^5.1.19",
 		"lucide-react": "^0.469.0",
@@ -63,6 +63,6 @@
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"engines": {
-		"node": ">=20.0.0"
+		"node": ">=22.0.0"
 	}
 }
