--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
-	"include": ["app", ".react-router/types/**/*"],
+	"include": [
+		"**/*",
+		"**/.server/**/*",
+		"**/.client/**/*",
+		".react-router/types/**/*"
+	],
 	"compilerOptions": {
 		"useDefineForClassFields": true,
 		"allowImportingTsExtensions": true,
@@ -8,7 +13,7 @@
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"jsx": "react-jsx",
-		"module": "ESNext",
+		"module": "ES2022",
 		"moduleResolution": "Bundler",
 		"resolveJsonModule": true,
 		"target": "ES2022",
