--- a/package.json
+++ b/package.json
@@ -11,55 +11,56 @@
 		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
-		"@base-ui-components/react": "^1.0.0-alpha.5",
+		"@base-ui-components/react": "^1.0.0-alpha.7",
 		"@headlessui/react": "^2.2.0",
-		"@portabletext/editor": "^1.26.1",
-		"@react-pdf/renderer": "^4.1.6",
-		"@react-router/node": "^7.1.3",
-		"@react-router/serve": "^7.1.3",
-		"@tailwindcss/vite": "^4.0.0",
-		"@tauri-apps/api": "^2.2.0",
+		"@portabletext/editor": "^1.41.0",
+		"@react-pdf/renderer": "^4.3.0",
+		"@react-router/node": "^7.4.0",
+		"@react-router/serve": "^7.4.0",
+		"@tailwindcss/vite": "^4.0.15",
+		"@tauri-apps/api": "^2.4.0",
 		"@tauri-apps/plugin-dialog": "~2.2.0",
 		"@tauri-apps/plugin-fs": "~2.2.0",
 		"@tauri-apps/plugin-sql": "~2.2.0",
 		"@tauri-apps/plugin-store": "~2.2.0",
-		"babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
+		"babel-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
 		"clsx": "^2.1.1",
-		"isbot": "^5.1.21",
-		"lucide-react": "^0.474.0",
-		"nanoid": "^5.0.9",
+		"isbot": "^5.1.25",
+		"lucide-react": "^0.483.0",
+		"nanoid": "^5.1.5",
 		"react": "^19.0.0",
-		"react-compiler-runtime": "^19.0.0-beta-e552027-20250112",
+		"react-compiler-runtime": "^19.0.0-beta-3229e95-20250315",
 		"react-dom": "^19.0.0",
-		"react-router": "^7.1.3",
-		"tailwind-merge": "^2.6.0",
-		"tailwindcss": "^4.0.0",
-		"ulid": "^2.3.0",
-		"valibot": "^1.0.0-beta.14",
+		"react-router": "^7.4.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss": "^4.0.15",
+		"ulid": "^2.4.0",
+		"valibot": "^1.0.0",
 		"vite-plugin-babel": "^1.3.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.19.0",
-		"@react-router/dev": "^7.1.3",
-		"@tauri-apps/cli": "^2.2.7",
-		"@types/bun": "^1.2.0",
-		"@types/eslint__js": "^8.42.3",
-		"@types/react": "^19.0.8",
-		"@types/react-dom": "^19.0.3",
+		"@eslint/js": "^9.22.0",
+		"@react-router/dev": "^7.4.0",
+		"@tauri-apps/cli": "^2.4.0",
+		"@types/bun": "^1.2.5",
+		"@types/eslint__js": "^9.14.0",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.19.0",
-		"eslint-config-prettier": "^10.0.1",
+		"eslint": "^9.22.0",
+		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.4",
-		"eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
-		"eslint-plugin-react-hooks": "5.1.0",
-		"globals": "^15.14.0",
-		"prettier": "^3.4.2",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
+		"eslint-plugin-react-hooks": "5.2.0",
+		"globals": "^16.0.0",
+		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"react-router-devtools": "^1.1.6",
 		"rollup-plugin-visualizer": "^5.14.0",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.21.0",
-		"vite": "^6.0.11",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.27.0",
+		"vite": "^6.2.2",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
