adds react router

--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
 		"electron": "36.2.1",
 		"ts-node": "^10.9.2",
 		"typescript": "~5.8.3",
-		"vite": "^6.3.5"
+		"vite": "^6.3.5",
+		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"dependencies": {
 		"electron-squirrel-startup": "^1.0.1",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"react-router": "^7.6.0"
 	}
 }
